--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,6 +27,10 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -44,20 +48,19 @@ jobs:
           go-version: 1.23
 
       - name: Build Go Lambda
-        working-directory: ./backend 
         run: |
-          mkdir -p infra
-          CGO_ENABLED=0 \
-          GOOS=linux \
-          GOARCH=amd64 \
-          go build -ldflags="-s -w -extldflags '-static'" -o bootstrap main.go
+          cd backend
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o bootstrap main.go
           zip bootstrap.zip bootstrap
+          cd ..
+          mkdir -p infra
+          mv backend/bootstrap.zip infra/bootstrap.zip
 
       - name: Upload Lambda to S3
         run: aws s3 cp infra/bootstrap.zip s3://${{ secrets.lambda-s3-bucket }}/${{ secrets.lambda-s3-key }} --region ${{ inputs.aws-region }}
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.5.7
 
@@ -67,6 +70,9 @@ jobs:
             -backend-config="bucket=${{ secrets.aws-statefile-s3-bucket }}" \
             -backend-config="key=chronos-serverless-api.tfstate" \
             -backend-config="region=${{ inputs.aws-region }}"
+
+      - name: Terraform Validate
+        run: cd terraform && terraform validate
 
       - name: Terraform Plan
         run: |
@@ -78,4 +84,5 @@ jobs:
             -var="parameter_store_key=${{ inputs.parameter-store-key }}"
 
       - name: Terraform Apply
-        run: cd terraform && terraform apply "plan.tfplan"
+        run: |
+          cd terraform && terraform apply -auto-approve "plan.tfplan"
